Making the HTML structure

--- a/src/output.css
+++ b/src/output.css
@@ -562,6 +562,10 @@ video {
   display: flex;
 }
 
+.hidden {
+  display: none;
+}
+
 .flex-col {
   flex-direction: column;
 }
@@ -591,5 +595,15 @@ video {
 @media (min-width: 640px) {
   .sm\:h-screen {
     height: 100vh;
+  }
+}
+
+@media (min-width: 1024px) {
+  .lg\:block {
+    display: block;
+  }
+
+  .lg\:hidden {
+    display: none;
   }
 }
