--- a/src/output.css
+++ b/src/output.css
@@ -570,6 +570,34 @@ video {
   left: 50%;
 }
 
+.left-0 {
+  left: 0px;
+}
+
+.left-\[-50\%\] {
+  left: -50%;
+}
+
+.top-6 {
+  top: 1.5rem;
+}
+
+.top-2 {
+  top: 0.5rem;
+}
+
+.top-10 {
+  top: 2.5rem;
+}
+
+.top-32 {
+  top: 8rem;
+}
+
+.bottom-0 {
+  bottom: 0px;
+}
+
 .m-auto {
   margin: auto;
 }
@@ -580,6 +608,62 @@ video {
 
 .mt-\[383px\] {
   margin-top: 383px;
+}
+
+.mt-10 {
+  margin-top: 2.5rem;
+}
+
+.ml-\[\] {
+  margin-left: ;
+}
+
+.ml-\[-50\%\] {
+  margin-left: -50%;
+}
+
+.mt-11 {
+  margin-top: 2.75rem;
+}
+
+.mt-\[\] {
+  margin-top: ;
+}
+
+.mt-\[40\] {
+  margin-top: 40;
+}
+
+.mt-\[40\%\] {
+  margin-top: 40%;
+}
+
+.mt-\[10\%\] {
+  margin-top: 10%;
+}
+
+.mt-\[50\%\] {
+  margin-top: 50%;
+}
+
+.mt-\[\%\] {
+  margin-top: %;
+}
+
+.mt-\[35\%\] {
+  margin-top: 35%;
+}
+
+.mt-\[30\%\] {
+  margin-top: 30%;
+}
+
+.mt-\[30\] {
+  margin-top: 30;
+}
+
+.mt-\[30px\] {
+  margin-top: 30px;
 }
 
 .flex {
