--- a/src/output.css
+++ b/src/output.css
@@ -650,6 +650,30 @@ video {
   right: -20%;
 }
 
+.top-28 {
+  top: 7rem;
+}
+
+.top-2 {
+  top: 0.5rem;
+}
+
+.top-24 {
+  top: 6rem;
+}
+
+.right-\[-24\%\] {
+  right: -24%;
+}
+
+.bottom-\[3\%\] {
+  bottom: 3%;
+}
+
+.bottom-\[38\%\] {
+  bottom: 38%;
+}
+
 .z-10 {
   z-index: 10;
 }
@@ -664,6 +688,26 @@ video {
 
 .mt-\[383px\] {
   margin-top: 383px;
+}
+
+.mt-\[363px\] {
+  margin-top: 363px;
+}
+
+.mt-\[343px\] {
+  margin-top: 343px;
+}
+
+.mt-\[34px\] {
+  margin-top: 34px;
+}
+
+.mt-\[340px\] {
+  margin-top: 340px;
+}
+
+.mt-\[300px\] {
+  margin-top: 300px;
 }
 
 .flex {
@@ -736,6 +780,19 @@ video {
   padding-bottom: 1.25rem;
 }
 
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+.pt-10 {
+  padding-top: 2.5rem;
+}
+
+.text-center {
+  text-align: center;
+}
+
 .font-Space_Grotesk {
   font-family: Space Grotesk, sans-serif;
 }
@@ -745,6 +802,10 @@ video {
   line-height: 2rem;
 }
 
+.text-\[40px\] {
+  font-size: 40px;
+}
+
 .font-bold {
   font-weight: 700;
 }
@@ -752,6 +813,10 @@ video {
 .text-pure_white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.text-\[\] {
+  color: ;
 }
 
 @media (min-width: 768px) {
