--- a/src/output.css
+++ b/src/output.css
@@ -674,6 +674,10 @@ video {
   bottom: 38%;
 }
 
+.bottom-\[40\%\] {
+  bottom: 40%;
+}
+
 .z-10 {
   z-index: 10;
 }
@@ -708,6 +712,22 @@ video {
 
 .mt-\[300px\] {
   margin-top: 300px;
+}
+
+.mb-\[\] {
+  margin-bottom: ;
+}
+
+.mb-\[90px\] {
+  margin-bottom: 90px;
+}
+
+.mt-\[90px\] {
+  margin-top: 90px;
+}
+
+.block {
+  display: block;
 }
 
 .flex {
@@ -755,6 +775,23 @@ video {
   overflow-x: hidden;
 }
 
+.border {
+  border-width: 1px;
+}
+
+.border-b {
+  border-bottom-width: 1px;
+}
+
+.border-b-2 {
+  border-bottom-width: 2px;
+}
+
+.border-neon_green {
+  --tw-border-opacity: 1;
+  border-color: rgb(78 225 160 / var(--tw-border-opacity));
+}
+
 .bg-dark_black {
   --tw-bg-opacity: 1;
   background-color: rgb(21 21 21 / var(--tw-bg-opacity));
@@ -789,6 +826,10 @@ video {
   padding-top: 2.5rem;
 }
 
+.pb-6 {
+  padding-bottom: 1.5rem;
+}
+
 .text-center {
   text-align: center;
 }
@@ -810,6 +851,38 @@ video {
   font-weight: 700;
 }
 
+.uppercase {
+  text-transform: uppercase;
+}
+
+.leading-\[\] {
+  line-height: ;
+}
+
+.leading-\[40px\] {
+  line-height: 40px;
+}
+
+.leading-\[26px\] {
+  line-height: 26px;
+}
+
+.tracking-tighter {
+  letter-spacing: -0.05em;
+}
+
+.tracking-\[\] {
+  letter-spacing: ;
+}
+
+.tracking-\[-1\.14px\] {
+  letter-spacing: -1.14px;
+}
+
+.tracking-\[2\.29px\] {
+  letter-spacing: 2.29px;
+}
+
 .text-pure_white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
@@ -817,6 +890,18 @@ video {
 
 .text-\[\] {
   color: ;
+}
+
+.underline {
+  text-decoration-line: underline;
+}
+
+.underline-offset-4 {
+  text-underline-offset: 4px;
+}
+
+.underline-offset-8 {
+  text-underline-offset: 8px;
 }
 
 @media (min-width: 768px) {
