--- a/src/output.css
+++ b/src/output.css
@@ -690,6 +690,11 @@ video {
   margin: auto;
 }
 
+.mx-4 {
+  margin-left: 1rem;
+  margin-right: 1rem;
+}
+
 .mt-\[383px\] {
   margin-top: 383px;
 }
@@ -724,6 +729,10 @@ video {
 
 .mt-\[90px\] {
   margin-top: 90px;
+}
+
+.mb-10 {
+  margin-bottom: 2.5rem;
 }
 
 .block {
@@ -787,6 +796,14 @@ video {
   border-bottom-width: 2px;
 }
 
+.border-t-2 {
+  border-top-width: 2px;
+}
+
+.border-b-4 {
+  border-bottom-width: 4px;
+}
+
 .border-neon_green {
   --tw-border-opacity: 1;
   border-color: rgb(78 225 160 / var(--tw-border-opacity));
@@ -830,6 +847,14 @@ video {
   padding-bottom: 1.5rem;
 }
 
+.pt-6 {
+  padding-top: 1.5rem;
+}
+
+.pb-10 {
+  padding-bottom: 2.5rem;
+}
+
 .text-center {
   text-align: center;
 }
@@ -845,6 +870,10 @@ video {
 
 .text-\[40px\] {
   font-size: 40px;
+}
+
+.text-\[32px\] {
+  font-size: 32px;
 }
 
 .font-bold {
@@ -883,6 +912,10 @@ video {
   letter-spacing: 2.29px;
 }
 
+.tracking-\[-1px\] {
+  letter-spacing: -1px;
+}
+
 .text-pure_white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
@@ -902,6 +935,11 @@ video {
 
 .underline-offset-8 {
   text-underline-offset: 8px;
+}
+
+.hover\:text-neon_green:hover {
+  --tw-text-opacity: 1;
+  color: rgb(78 225 160 / var(--tw-text-opacity));
 }
 
 @media (min-width: 768px) {
