--- a/src/output.css
+++ b/src/output.css
@@ -678,6 +678,18 @@ video {
   bottom: 40%;
 }
 
+.top-\[-20px\] {
+  top: -20px;
+}
+
+.top-\[-60px\] {
+  top: -60px;
+}
+
+.top-\[-50px\] {
+  top: -50px;
+}
+
 .z-10 {
   z-index: 10;
 }
@@ -733,6 +745,18 @@ video {
 
 .mb-10 {
   margin-bottom: 2.5rem;
+}
+
+.mt-10 {
+  margin-top: 2.5rem;
+}
+
+.mt-1 {
+  margin-top: 0.25rem;
+}
+
+.mt-14 {
+  margin-top: 3.5rem;
 }
 
 .block {
@@ -853,6 +877,14 @@ video {
 
 .pb-10 {
   padding-bottom: 2.5rem;
+}
+
+.pb-2 {
+  padding-bottom: 0.5rem;
+}
+
+.pb-2\.5 {
+  padding-bottom: 0.625rem;
 }
 
 .text-center {
