--- a/src/output.css
+++ b/src/output.css
@@ -562,6 +562,10 @@ video {
   position: relative;
 }
 
+.bottom-\[40\%\] {
+  bottom: 40%;
+}
+
 .left-1\/2 {
   left: 50%;
 }
@@ -570,120 +574,20 @@ video {
   left: -50%;
 }
 
-.top-0 {
-  top: 0px;
-}
-
-.top-32 {
-  top: 8rem;
-}
-
-.bottom-0 {
-  bottom: 0px;
-}
-
-.bottom-\[\] {
-  bottom: ;
-}
-
-.bottom-\[20\%\] {
-  bottom: 20%;
-}
-
-.bottom-\[10\%\] {
-  bottom: 10%;
-}
-
-.bottom-\[30\%\] {
-  bottom: 30%;
-}
-
-.bottom-\[27\%\] {
-  bottom: 27%;
-}
-
-.bottom-\[\%\] {
-  bottom: %;
-}
-
-.bottom-\[35\%\] {
-  bottom: 35%;
-}
-
-.bottom-\[34\%\] {
-  bottom: 34%;
-}
-
-.bottom-\[33\%\] {
-  bottom: 33%;
-}
-
-.bottom-\[36\%\] {
-  bottom: 36%;
-}
-
-.right-0 {
-  right: 0px;
-}
-
-.right-\[\] {
-  right: ;
-}
-
-.right-\[-50\] {
-  right: -50;
+.right-\[-20\%\] {
+  right: -20%;
 }
 
 .right-\[-50\%\] {
   right: -50%;
 }
 
-.right-\[50\%\] {
-  right: 50%;
+.top-0 {
+  top: 0px;
 }
 
-.right-\[-30\%\] {
-  right: -30%;
-}
-
-.right-\[-20\%\] {
-  right: -20%;
-}
-
-.top-28 {
-  top: 7rem;
-}
-
-.top-2 {
-  top: 0.5rem;
-}
-
-.top-24 {
-  top: 6rem;
-}
-
-.right-\[-24\%\] {
-  right: -24%;
-}
-
-.bottom-\[3\%\] {
-  bottom: 3%;
-}
-
-.bottom-\[38\%\] {
-  bottom: 38%;
-}
-
-.bottom-\[40\%\] {
-  bottom: 40%;
-}
-
-.top-\[-20px\] {
-  top: -20px;
-}
-
-.top-\[-60px\] {
-  top: -60px;
+.top-32 {
+  top: 8rem;
 }
 
 .top-\[-50px\] {
@@ -707,60 +611,20 @@ video {
   margin-right: 1rem;
 }
 
-.mt-\[383px\] {
-  margin-top: 383px;
+.mt-14 {
+  margin-top: 3.5rem;
 }
 
-.mt-\[363px\] {
-  margin-top: 363px;
-}
-
-.mt-\[343px\] {
-  margin-top: 343px;
-}
-
-.mt-\[34px\] {
-  margin-top: 34px;
-}
-
-.mt-\[340px\] {
-  margin-top: 340px;
+.mt-5 {
+  margin-top: 1.25rem;
 }
 
 .mt-\[300px\] {
   margin-top: 300px;
 }
 
-.mb-\[\] {
-  margin-bottom: ;
-}
-
-.mb-\[90px\] {
-  margin-bottom: 90px;
-}
-
 .mt-\[90px\] {
   margin-top: 90px;
-}
-
-.mb-10 {
-  margin-bottom: 2.5rem;
-}
-
-.mt-10 {
-  margin-top: 2.5rem;
-}
-
-.mt-1 {
-  margin-top: 0.25rem;
-}
-
-.mt-14 {
-  margin-top: 3.5rem;
-}
-
-.block {
-  display: block;
 }
 
 .flex {
@@ -792,6 +656,10 @@ video {
   align-items: center;
 }
 
+.justify-start {
+  justify-content: flex-start;
+}
+
 .justify-center {
   justify-content: center;
 }
@@ -804,28 +672,32 @@ video {
   gap: 1.5rem;
 }
 
+.gap-\[30px\] {
+  gap: 30px;
+}
+
+.gap-\[18px\] {
+  gap: 18px;
+}
+
+.gap-\[\] {
+  gap: ;
+}
+
 .overflow-x-hidden {
   overflow-x: hidden;
-}
-
-.border {
-  border-width: 1px;
-}
-
-.border-b {
-  border-bottom-width: 1px;
 }
 
 .border-b-2 {
   border-bottom-width: 2px;
 }
 
-.border-t-2 {
-  border-top-width: 2px;
-}
-
 .border-b-4 {
   border-bottom-width: 4px;
+}
+
+.border-t-2 {
+  border-top-width: 2px;
 }
 
 .border-neon_green {
@@ -853,26 +725,14 @@ video {
   padding-right: 0.75rem;
 }
 
-.py-5 {
-  padding-top: 1.25rem;
-  padding-bottom: 1.25rem;
-}
-
 .px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
 }
 
-.pt-10 {
-  padding-top: 2.5rem;
-}
-
-.pb-6 {
-  padding-bottom: 1.5rem;
-}
-
-.pt-6 {
-  padding-top: 1.5rem;
+.py-5 {
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
 }
 
 .pb-10 {
@@ -885,6 +745,22 @@ video {
 
 .pb-2\.5 {
   padding-bottom: 0.625rem;
+}
+
+.pb-6 {
+  padding-bottom: 1.5rem;
+}
+
+.pt-10 {
+  padding-top: 2.5rem;
+}
+
+.pt-6 {
+  padding-top: 1.5rem;
+}
+
+.pt-5 {
+  padding-top: 1.25rem;
 }
 
 .text-center {
@@ -900,12 +776,17 @@ video {
   line-height: 2rem;
 }
 
+.text-\[32px\] {
+  font-size: 32px;
+}
+
 .text-\[40px\] {
   font-size: 40px;
 }
 
-.text-\[32px\] {
-  font-size: 32px;
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
 }
 
 .font-bold {
@@ -916,57 +797,41 @@ video {
   text-transform: uppercase;
 }
 
-.leading-\[\] {
-  line-height: ;
+.leading-\[26px\] {
+  line-height: 26px;
+}
+
+.leading-\[32px\] {
+  line-height: 32px;
 }
 
 .leading-\[40px\] {
   line-height: 40px;
 }
 
-.leading-\[26px\] {
-  line-height: 26px;
+.leading-\[\] {
+  line-height: ;
 }
 
-.tracking-tighter {
-  letter-spacing: -0.05em;
-}
-
-.tracking-\[\] {
-  letter-spacing: ;
+.leading-\[28px\] {
+  line-height: 28px;
 }
 
 .tracking-\[-1\.14px\] {
   letter-spacing: -1.14px;
 }
 
-.tracking-\[2\.29px\] {
-  letter-spacing: 2.29px;
-}
-
 .tracking-\[-1px\] {
   letter-spacing: -1px;
+}
+
+.tracking-\[2\.29px\] {
+  letter-spacing: 2.29px;
 }
 
 .text-pure_white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.text-\[\] {
-  color: ;
-}
-
-.underline {
-  text-decoration-line: underline;
-}
-
-.underline-offset-4 {
-  text-underline-offset: 4px;
-}
-
-.underline-offset-8 {
-  text-underline-offset: 8px;
 }
 
 .hover\:text-neon_green:hover {
