--- a/src/output.css
+++ b/src/output.css
@@ -688,6 +688,10 @@ video {
   display: none;
 }
 
+.h-5 {
+  height: 1.25rem;
+}
+
 .w-\[47\%\] {
   width: 47%;
 }
@@ -696,9 +700,21 @@ video {
   width: 100%;
 }
 
+.w-screen {
+  width: 100vw;
+}
+
+.w-5 {
+  width: 1.25rem;
+}
+
 .translate-x-\[-50\%\] {
   --tw-translate-x: -50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.cursor-pointer {
+  cursor: pointer;
 }
 
 .flex-col {
@@ -768,6 +784,11 @@ video {
 .border-neon_green {
   --tw-border-opacity: 1;
   border-color: rgb(78 225 160 / var(--tw-border-opacity));
+}
+
+.border-white {
+  --tw-border-opacity: 1;
+  border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 
 .bg-dark_black {
@@ -945,6 +966,10 @@ video {
 
 .placeholder\:uppercase::placeholder {
   text-transform: uppercase;
+}
+
+.hover\:fill-neon_green:hover {
+  fill: #4EE1A0;
 }
 
 .hover\:text-neon_green:hover {
