--- a/src/output.css
+++ b/src/output.css
@@ -708,6 +708,10 @@ video {
   width: 1.25rem;
 }
 
+.w-\[\] {
+  width: ;
+}
+
 .translate-x-\[-50\%\] {
   --tw-translate-x: -50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
