--- a/src/output.css
+++ b/src/output.css
@@ -647,6 +647,38 @@ video {
   margin-top: 90px;
 }
 
+.mt-0 {
+  margin-top: 0px;
+}
+
+.mt-\[-20px\] {
+  margin-top: -20px;
+}
+
+.mt-\[-50px\] {
+  margin-top: -50px;
+}
+
+.mt-\[-60px\] {
+  margin-top: -60px;
+}
+
+.mt-\[-80px\] {
+  margin-top: -80px;
+}
+
+.mr-\[1\] {
+  margin-right: 1;
+}
+
+.mr-\[165px\] {
+  margin-right: 165px;
+}
+
+.mr-\[\] {
+  margin-right: ;
+}
+
 .flex {
   display: flex;
 }
@@ -737,11 +769,6 @@ video {
 .bg-dark_gray {
   --tw-bg-opacity: 1;
   background-color: rgb(36 36 36 / var(--tw-bg-opacity));
-}
-
-.bg-white {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
 .px-2 {
@@ -917,6 +944,18 @@ video {
     margin-top: 0px;
   }
 
+  .md\:mr-4 {
+    margin-right: 1rem;
+  }
+
+  .md\:mr-10 {
+    margin-right: 2.5rem;
+  }
+
+  .md\:mr-11 {
+    margin-right: 2.75rem;
+  }
+
   .md\:block {
     display: block;
   }
@@ -965,22 +1004,13 @@ video {
     gap: 22px;
   }
 
-  .md\:border {
-    border-width: 1px;
-  }
-
-  .md\:border-white {
-    --tw-border-opacity: 1;
-    border-color: rgb(255 255 255 / var(--tw-border-opacity));
-  }
-
-  .md\:border-red-600 {
-    --tw-border-opacity: 1;
-    border-color: rgb(220 38 38 / var(--tw-border-opacity));
-  }
-
   .md\:border-b-transparent {
     border-bottom-color: transparent;
+  }
+
+  .md\:px-\[160px\] {
+    padding-left: 160px;
+    padding-right: 160px;
   }
 
   .md\:px-\[30px\] {
@@ -988,14 +1018,19 @@ video {
     padding-right: 30px;
   }
 
-  .md\:px-\[1\] {
-    padding-left: 1;
-    padding-right: 1;
+  .md\:px-\[\] {
+    padding-left: ;
+    padding-right: ;
   }
 
-  .md\:px-\[160px\] {
-    padding-left: 160px;
-    padding-right: 160px;
+  .md\:px-\[165px\] {
+    padding-left: 165px;
+    padding-right: 165px;
+  }
+
+  .md\:text-7xl {
+    font-size: 4.5rem;
+    line-height: 1;
   }
 }
 
@@ -1015,6 +1050,10 @@ video {
   .lg\:px-\[165px\] {
     padding-left: 165px;
     padding-right: 165px;
+  }
+
+  .lg\:text-\[88px\] {
+    font-size: 88px;
   }
 }
 
