--- a/src/output.css
+++ b/src/output.css
@@ -679,6 +679,38 @@ video {
   margin-right: ;
 }
 
+.mr-\[-\] {
+  margin-right: -;
+}
+
+.mr-\[-30\] {
+  margin-right: -30;
+}
+
+.mr-\[-30\%\] {
+  margin-right: -30%;
+}
+
+.mr-\[-80\%\] {
+  margin-right: -80%;
+}
+
+.mr-\[-0\%\] {
+  margin-right: -0%;
+}
+
+.mr-\[-1000\%\] {
+  margin-right: -1000%;
+}
+
+.mr-\[-100\] {
+  margin-right: -100;
+}
+
+.mr-\[-100px\] {
+  margin-right: -100px;
+}
+
 .flex {
   display: flex;
 }
@@ -693,6 +725,14 @@ video {
 
 .w-full {
   width: 100%;
+}
+
+.w-\[70\%\] {
+  width: 70%;
+}
+
+.w-\[60\%\] {
+  width: 60%;
 }
 
 .translate-x-\[-50\%\] {
@@ -936,6 +976,14 @@ video {
 }
 
 @media (min-width: 768px) {
+  .md\:relative {
+    position: relative;
+  }
+
+  .md\:z-40 {
+    z-index: 40;
+  }
+
   .md\:m-auto {
     margin: auto;
   }
@@ -954,6 +1002,82 @@ video {
 
   .md\:mr-11 {
     margin-right: 2.75rem;
+  }
+
+  .md\:ml-auto {
+    margin-left: auto;
+  }
+
+  .md\:mr-0 {
+    margin-right: 0px;
+  }
+
+  .md\:mt-\[-80px\] {
+    margin-top: -80px;
+  }
+
+  .md\:mr-\[\] {
+    margin-right: ;
+  }
+
+  .md\:mr-\[-\] {
+    margin-right: -;
+  }
+
+  .md\:mr-\[-80px\] {
+    margin-right: -80px;
+  }
+
+  .md\:mr-\[-100px\] {
+    margin-right: -100px;
+  }
+
+  .md\:mr-\[-120px\] {
+    margin-right: -120px;
+  }
+
+  .md\:mr-\[-122px\] {
+    margin-right: -122px;
+  }
+
+  .md\:mr-\[-125px\] {
+    margin-right: -125px;
+  }
+
+  .md\:mr-\[-145px\] {
+    margin-right: -145px;
+  }
+
+  .md\:mr-\[-1px\] {
+    margin-right: -1px;
+  }
+
+  .md\:mr-\[-160px\] {
+    margin-right: -160px;
+  }
+
+  .md\:mr-\[-180px\] {
+    margin-right: -180px;
+  }
+
+  .md\:mr-\[-190px\] {
+    margin-right: -190px;
+  }
+
+  .md\:mt-\[\] {
+    margin-top: ;
+  }
+
+  .md\:mt-\[43px\] {
+    margin-top: 43px;
+  }
+
+  .md\:mb-\[\] {
+    margin-bottom: ;
+  }
+
+  .md\:mb-\[34px\] {
+    margin-bottom: 34px;
   }
 
   .md\:block {
@@ -980,6 +1104,38 @@ video {
     width: 100vw;
   }
 
+  .md\:w-\[\] {
+    width: ;
+  }
+
+  .md\:w-\[30\] {
+    width: 30;
+  }
+
+  .md\:w-\[35\%\] {
+    width: 35%;
+  }
+
+  .md\:w-\[65\] {
+    width: 65;
+  }
+
+  .md\:w-\[65\%\] {
+    width: 65%;
+  }
+
+  .md\:w-\[80\%\] {
+    width: 80%;
+  }
+
+  .md\:w-\[50\%\] {
+    width: 50%;
+  }
+
+  .md\:w-\[70\%\] {
+    width: 70%;
+  }
+
   .md\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
@@ -990,6 +1146,10 @@ video {
 
   .md\:flex-row-reverse {
     flex-direction: row-reverse;
+  }
+
+  .md\:justify-start {
+    justify-content: flex-start;
   }
 
   .md\:justify-end {
@@ -1028,6 +1188,10 @@ video {
     padding-right: 165px;
   }
 
+  .md\:text-left {
+    text-align: left;
+  }
+
   .md\:text-7xl {
     font-size: 4.5rem;
     line-height: 1;
@@ -1035,6 +1199,10 @@ video {
 }
 
 @media (min-width: 1024px) {
+  .lg\:mt-\[-80px\] {
+    margin-top: -80px;
+  }
+
   .lg\:block {
     display: block;
   }
