--- a/src/output.css
+++ b/src/output.css
@@ -980,6 +980,58 @@ video {
     position: relative;
   }
 
+  .md\:top-\[-400px\] {
+    top: -400px;
+  }
+
+  .md\:top-\[-00px\] {
+    top: -00px;
+  }
+
+  .md\:top-\[-180px\] {
+    top: -180px;
+  }
+
+  .md\:top-\[-170px\] {
+    top: -170px;
+  }
+
+  .md\:top-\[-150px\] {
+    top: -150px;
+  }
+
+  .md\:top-\[-40\] {
+    top: -40;
+  }
+
+  .md\:top-\[-40px\] {
+    top: -40px;
+  }
+
+  .md\:top-\[-30px\] {
+    top: -30px;
+  }
+
+  .md\:top-\[-20px\] {
+    top: -20px;
+  }
+
+  .md\:top-\[-120px\] {
+    top: -120px;
+  }
+
+  .md\:top-\[-80px\] {
+    top: -80px;
+  }
+
+  .md\:top-\[-90px\] {
+    top: -90px;
+  }
+
+  .md\:top-\[-70px\] {
+    top: -70px;
+  }
+
   .md\:z-40 {
     z-index: 40;
   }
@@ -1078,6 +1130,10 @@ video {
 
   .md\:mb-\[34px\] {
     margin-bottom: 34px;
+  }
+
+  .md\:mt-10 {
+    margin-top: 2.5rem;
   }
 
   .md\:block {
