--- a/src/output.css
+++ b/src/output.css
@@ -602,6 +602,10 @@ video {
   top: -50px;
 }
 
+.bottom-4 {
+  bottom: 1rem;
+}
+
 .z-10 {
   z-index: 10;
 }
@@ -1032,12 +1036,45 @@ video {
     top: -70px;
   }
 
+  .md\:right-0 {
+    right: 0px;
+  }
+
+  .md\:bottom-0 {
+    bottom: 0px;
+  }
+
+  .md\:bottom-\[\] {
+    bottom: ;
+  }
+
+  .md\:bottom-\[50\%\] {
+    bottom: 50%;
+  }
+
+  .md\:bottom-\[10\%\] {
+    bottom: 10%;
+  }
+
+  .md\:bottom-\[0\%\] {
+    bottom: 0%;
+  }
+
+  .md\:bottom-\[1\%\] {
+    bottom: 1%;
+  }
+
   .md\:z-40 {
     z-index: 40;
   }
 
   .md\:m-auto {
     margin: auto;
+  }
+
+  .md\:mx-\[160px\] {
+    margin-left: 160px;
+    margin-right: 160px;
   }
 
   .md\:mt-0 {
@@ -1263,6 +1300,30 @@ video {
 }
 
 @media (min-width: 1024px) {
+  .lg\:right-\[\] {
+    right: ;
+  }
+
+  .lg\:right-\[50\%\] {
+    right: 50%;
+  }
+
+  .lg\:bottom-4 {
+    bottom: 1rem;
+  }
+
+  .lg\:bottom-10 {
+    bottom: 2.5rem;
+  }
+
+  .lg\:bottom-20 {
+    bottom: 5rem;
+  }
+
+  .lg\:bottom-28 {
+    bottom: 7rem;
+  }
+
   .lg\:mt-\[-80px\] {
     margin-top: -80px;
   }
