--- a/src/output.css
+++ b/src/output.css
@@ -602,10 +602,6 @@ video {
   top: -50px;
 }
 
-.bottom-4 {
-  bottom: 1rem;
-}
-
 .z-10 {
   z-index: 10;
 }
@@ -643,6 +639,10 @@ video {
   margin-top: 1.25rem;
 }
 
+.mt-\[-80px\] {
+  margin-top: -80px;
+}
+
 .mt-\[300px\] {
   margin-top: 300px;
 }
@@ -651,68 +651,12 @@ video {
   margin-top: 90px;
 }
 
-.mt-0 {
-  margin-top: 0px;
+.mb-\[67px\] {
+  margin-bottom: 67px;
 }
 
-.mt-\[-20px\] {
-  margin-top: -20px;
-}
-
-.mt-\[-50px\] {
-  margin-top: -50px;
-}
-
-.mt-\[-60px\] {
-  margin-top: -60px;
-}
-
-.mt-\[-80px\] {
-  margin-top: -80px;
-}
-
-.mr-\[1\] {
-  margin-right: 1;
-}
-
-.mr-\[165px\] {
-  margin-right: 165px;
-}
-
-.mr-\[\] {
-  margin-right: ;
-}
-
-.mr-\[-\] {
-  margin-right: -;
-}
-
-.mr-\[-30\] {
-  margin-right: -30;
-}
-
-.mr-\[-30\%\] {
-  margin-right: -30%;
-}
-
-.mr-\[-80\%\] {
-  margin-right: -80%;
-}
-
-.mr-\[-0\%\] {
-  margin-right: -0%;
-}
-
-.mr-\[-1000\%\] {
-  margin-right: -1000%;
-}
-
-.mr-\[-100\] {
-  margin-right: -100;
-}
-
-.mr-\[-100px\] {
-  margin-right: -100px;
+.mb-\[77px\] {
+  margin-bottom: 77px;
 }
 
 .flex {
@@ -727,16 +671,12 @@ video {
   width: 47%;
 }
 
-.w-full {
-  width: 100%;
-}
-
-.w-\[70\%\] {
-  width: 70%;
-}
-
 .w-\[60\%\] {
   width: 60%;
+}
+
+.w-full {
+  width: 100%;
 }
 
 .translate-x-\[-50\%\] {
@@ -746,6 +686,10 @@ video {
 
 .cursor-pointer {
   cursor: pointer;
+}
+
+.list-disc {
+  list-style-type: disc;
 }
 
 .flex-col {
@@ -984,84 +928,20 @@ video {
     position: relative;
   }
 
-  .md\:top-\[-400px\] {
-    top: -400px;
-  }
-
-  .md\:top-\[-00px\] {
-    top: -00px;
-  }
-
-  .md\:top-\[-180px\] {
-    top: -180px;
-  }
-
-  .md\:top-\[-170px\] {
-    top: -170px;
-  }
-
-  .md\:top-\[-150px\] {
-    top: -150px;
-  }
-
-  .md\:top-\[-40\] {
-    top: -40;
-  }
-
-  .md\:top-\[-40px\] {
-    top: -40px;
-  }
-
-  .md\:top-\[-30px\] {
-    top: -30px;
-  }
-
-  .md\:top-\[-20px\] {
-    top: -20px;
-  }
-
-  .md\:top-\[-120px\] {
-    top: -120px;
-  }
-
-  .md\:top-\[-80px\] {
-    top: -80px;
-  }
-
-  .md\:top-\[-90px\] {
-    top: -90px;
-  }
-
-  .md\:top-\[-70px\] {
-    top: -70px;
+  .md\:bottom-0 {
+    bottom: 0px;
   }
 
   .md\:right-0 {
     right: 0px;
   }
 
-  .md\:bottom-0 {
-    bottom: 0px;
+  .md\:top-\[-150px\] {
+    top: -150px;
   }
 
-  .md\:bottom-\[\] {
-    bottom: ;
-  }
-
-  .md\:bottom-\[50\%\] {
-    bottom: 50%;
-  }
-
-  .md\:bottom-\[10\%\] {
-    bottom: 10%;
-  }
-
-  .md\:bottom-\[0\%\] {
-    bottom: 0%;
-  }
-
-  .md\:bottom-\[1\%\] {
-    bottom: 1%;
+  .md\:top-\[-80px\] {
+    top: -80px;
   }
 
   .md\:z-40 {
@@ -1077,20 +957,8 @@ video {
     margin-right: 160px;
   }
 
-  .md\:mt-0 {
-    margin-top: 0px;
-  }
-
-  .md\:mr-4 {
-    margin-right: 1rem;
-  }
-
-  .md\:mr-10 {
-    margin-right: 2.5rem;
-  }
-
-  .md\:mr-11 {
-    margin-right: 2.75rem;
+  .md\:mb-\[66px\] {
+    margin-bottom: 66px;
   }
 
   .md\:ml-auto {
@@ -1101,84 +969,24 @@ video {
     margin-right: 0px;
   }
 
-  .md\:mt-\[-80px\] {
-    margin-top: -80px;
-  }
-
-  .md\:mr-\[\] {
-    margin-right: ;
-  }
-
-  .md\:mr-\[-\] {
-    margin-right: -;
-  }
-
-  .md\:mr-\[-80px\] {
-    margin-right: -80px;
-  }
-
-  .md\:mr-\[-100px\] {
-    margin-right: -100px;
-  }
-
-  .md\:mr-\[-120px\] {
-    margin-right: -120px;
-  }
-
-  .md\:mr-\[-122px\] {
-    margin-right: -122px;
-  }
-
-  .md\:mr-\[-125px\] {
-    margin-right: -125px;
-  }
-
-  .md\:mr-\[-145px\] {
-    margin-right: -145px;
-  }
-
-  .md\:mr-\[-1px\] {
-    margin-right: -1px;
-  }
-
-  .md\:mr-\[-160px\] {
-    margin-right: -160px;
-  }
-
-  .md\:mr-\[-180px\] {
-    margin-right: -180px;
+  .md\:mr-11 {
+    margin-right: 2.75rem;
   }
 
   .md\:mr-\[-190px\] {
     margin-right: -190px;
   }
 
-  .md\:mt-\[\] {
-    margin-top: ;
-  }
-
-  .md\:mt-\[43px\] {
-    margin-top: 43px;
-  }
-
-  .md\:mb-\[\] {
-    margin-bottom: ;
-  }
-
-  .md\:mb-\[34px\] {
-    margin-bottom: 34px;
+  .md\:mt-0 {
+    margin-top: 0px;
   }
 
   .md\:mt-10 {
     margin-top: 2.5rem;
   }
 
-  .md\:mb-\[px\] {
-    margin-bottom: px;
-  }
-
-  .md\:mb-\[66px\] {
-    margin-bottom: 66px;
+  .md\:mt-\[43px\] {
+    margin-top: 43px;
   }
 
   .md\:block {
@@ -1197,44 +1005,16 @@ video {
     display: none;
   }
 
+  .md\:w-\[65\%\] {
+    width: 65%;
+  }
+
   .md\:w-full {
     width: 100%;
   }
 
   .md\:w-screen {
     width: 100vw;
-  }
-
-  .md\:w-\[\] {
-    width: ;
-  }
-
-  .md\:w-\[30\] {
-    width: 30;
-  }
-
-  .md\:w-\[35\%\] {
-    width: 35%;
-  }
-
-  .md\:w-\[65\] {
-    width: 65;
-  }
-
-  .md\:w-\[65\%\] {
-    width: 65%;
-  }
-
-  .md\:w-\[80\%\] {
-    width: 80%;
-  }
-
-  .md\:w-\[50\%\] {
-    width: 50%;
-  }
-
-  .md\:w-\[70\%\] {
-    width: 70%;
   }
 
   .md\:grid-cols-2 {
@@ -1269,24 +1049,9 @@ video {
     border-bottom-color: transparent;
   }
 
-  .md\:px-\[160px\] {
-    padding-left: 160px;
-    padding-right: 160px;
-  }
-
   .md\:px-\[30px\] {
     padding-left: 30px;
     padding-right: 30px;
-  }
-
-  .md\:px-\[\] {
-    padding-left: ;
-    padding-right: ;
-  }
-
-  .md\:px-\[165px\] {
-    padding-left: 165px;
-    padding-right: 165px;
   }
 
   .md\:text-left {
@@ -1297,116 +1062,117 @@ video {
     font-size: 4.5rem;
     line-height: 1;
   }
+
+  .md\:text-\[72px\] {
+    font-size: 72px;
+  }
+
+  .md\:text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
+
+  .md\:text-\[\] {
+    color: ;
+  }
+
+  .md\:text-\[72p\] {
+    color: 72p;
+  }
 }
 
 @media (min-width: 1024px) {
-  .lg\:right-\[\] {
-    right: ;
+  .lg\:bottom-28 {
+    bottom: 7rem;
   }
 
   .lg\:right-\[50\%\] {
     right: 50%;
   }
 
-  .lg\:bottom-4 {
-    bottom: 1rem;
-  }
-
-  .lg\:bottom-10 {
-    bottom: 2.5rem;
-  }
-
-  .lg\:bottom-20 {
-    bottom: 5rem;
-  }
-
-  .lg\:bottom-28 {
-    bottom: 7rem;
-  }
-
-  .lg\:mt-\[-80px\] {
-    margin-top: -80px;
-  }
-
-  .lg\:mr-\[\] {
-    margin-right: ;
-  }
-
-  .lg\:mr-\[165px\] {
-    margin-right: 165px;
-  }
-
-  .lg\:mr-\[265px\] {
-    margin-right: 265px;
-  }
-
-  .lg\:mr-\[355px\] {
-    margin-right: 355px;
-  }
-
-  .lg\:mr-\[35px\] {
-    margin-right: 35px;
-  }
-
-  .lg\:mr-\[3px\] {
-    margin-right: 3px;
-  }
-
-  .lg\:mr-\[px\] {
-    margin-right: px;
-  }
-
-  .lg\:mr-\[399px\] {
-    margin-right: 399px;
-  }
-
-  .lg\:mr-\[255px\] {
-    margin-right: 255px;
-  }
-
-  .lg\:mr-\[155px\] {
-    margin-right: 155px;
-  }
-
-  .lg\:mr-\[135px\] {
-    margin-right: 135px;
+  .lg\:mx-0 {
+    margin-left: 0px;
+    margin-right: 0px;
   }
 
   .lg\:mr-\[-80px\] {
     margin-right: -80px;
   }
 
+  .lg\:mr-\[135px\] {
+    margin-right: 135px;
+  }
+
+  .lg\:mr-\[399px\] {
+    margin-right: 399px;
+  }
+
+  .lg\:mb-0 {
+    margin-bottom: 0px;
+  }
+
+  .lg\:mb-\[\] {
+    margin-bottom: ;
+  }
+
+  .lg\:mb-\[67px\] {
+    margin-bottom: 67px;
+  }
+
   .lg\:block {
     display: block;
+  }
+
+  .lg\:flex {
+    display: flex;
   }
 
   .lg\:hidden {
     display: none;
   }
 
-  .lg\:w-1\/2 {
-    width: 50%;
+  .lg\:w-\[60\%\] {
+    width: 60%;
+  }
+
+  .lg\:w-full {
+    width: 100%;
   }
 
   .lg\:w-\[\] {
     width: ;
   }
 
-  .lg\:w-\[60\] {
-    width: 60;
+  .lg\:w-\[40\] {
+    width: 40;
   }
 
-  .lg\:w-\[60\%\] {
-    width: 60%;
+  .lg\:w-\[40\%\] {
+    width: 40%;
+  }
+
+  .lg\:w-\[45\%\] {
+    width: 45%;
+  }
+
+  .lg\:w-\[55\%\] {
+    width: 55%;
   }
 
   .lg\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
-  .lg\:px-\[165px\] {
-    padding-left: 165px;
-    padding-right: 165px;
+  .lg\:justify-between {
+    justify-content: space-between;
+  }
+
+  .lg\:gap-\[200px\] {
+    gap: 200px;
+  }
+
+  .lg\:gap-\[180px\] {
+    gap: 180px;
   }
 
   .lg\:px-0 {
@@ -1414,8 +1180,50 @@ video {
     padding-right: 0px;
   }
 
+  .lg\:px-\[165px\] {
+    padding-left: 165px;
+    padding-right: 165px;
+  }
+
+  .lg\:pb-\[\] {
+    padding-bottom: ;
+  }
+
+  .lg\:pb-\[84px\] {
+    padding-bottom: 84px;
+  }
+
+  .lg\:pt-\[84px\] {
+    padding-top: 84px;
+  }
+
+  .lg\:pt-0 {
+    padding-top: 0px;
+  }
+
+  .lg\:pb-0 {
+    padding-bottom: 0px;
+  }
+
+  .lg\:pt-9 {
+    padding-top: 2.25rem;
+  }
+
+  .lg\:pt-5 {
+    padding-top: 1.25rem;
+  }
+
+  .lg\:text-left {
+    text-align: left;
+  }
+
   .lg\:text-\[88px\] {
     font-size: 88px;
+  }
+
+  .lg\:text-7xl {
+    font-size: 4.5rem;
+    line-height: 1;
   }
 }
 
