--- a/src/style.css
+++ b/src/style.css
@@ -5,3 +5,16 @@
 .active-red {
   border-bottom: 2px solid #FF6F5B;
 }
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.image:hover .overlay {
+  display: block;
+}
