--- a/src/output.css
+++ b/src/output.css
@@ -610,12 +610,72 @@ video {
   top: -50px;
 }
 
+.bottom-0 {
+  bottom: 0px;
+}
+
+.left-0 {
+  left: 0px;
+}
+
+.right-5 {
+  right: 1.25rem;
+}
+
+.right-12 {
+  right: 3rem;
+}
+
+.right-\[\] {
+  right: ;
+}
+
+.right-\[200\] {
+  right: 200;
+}
+
+.right-\[200px\] {
+  right: 200px;
+}
+
+.right-\[150px\] {
+  right: 150px;
+}
+
+.right-\[140px\] {
+  right: 140px;
+}
+
+.right-\[120px\] {
+  right: 120px;
+}
+
+.right-\[0px\] {
+  right: 0px;
+}
+
+.right-\[10px\] {
+  right: 10px;
+}
+
+.right-\[1450px\] {
+  right: 1450px;
+}
+
+.right-\[145px\] {
+  right: 145px;
+}
+
 .z-10 {
   z-index: 10;
 }
 
 .z-20 {
   z-index: 20;
+}
+
+.z-50 {
+  z-index: 50;
 }
 
 .m-auto {
@@ -1002,6 +1062,34 @@ video {
     top: 5rem;
   }
 
+  .md\:right-\[145px\] {
+    right: 145px;
+  }
+
+  .md\:right-\[148px\] {
+    right: 148px;
+  }
+
+  .md\:right-\[146px\] {
+    right: 146px;
+  }
+
+  .md\:left-\[\] {
+    left: ;
+  }
+
+  .md\:left-\[90\%\] {
+    left: 90%;
+  }
+
+  .md\:left-\[30\%\] {
+    left: 30%;
+  }
+
+  .md\:left-\[50\%\] {
+    left: 50%;
+  }
+
   .md\:z-40 {
     z-index: 40;
   }
@@ -1358,6 +1446,82 @@ video {
 
   .lg\:left-\[-50\%\] {
     left: -50%;
+  }
+
+  .lg\:right-\[200px\] {
+    right: 200px;
+  }
+
+  .lg\:right-\[20px\] {
+    right: 20px;
+  }
+
+  .lg\:right-\[-20px\] {
+    right: -20px;
+  }
+
+  .lg\:right-\[-220px\] {
+    right: -220px;
+  }
+
+  .lg\:right-\[300px\] {
+    right: 300px;
+  }
+
+  .lg\:right-\[1000px\] {
+    right: 1000px;
+  }
+
+  .lg\:right-\[900px\] {
+    right: 900px;
+  }
+
+  .lg\:right-\[90px\] {
+    right: 90px;
+  }
+
+  .lg\:right-\[930px\] {
+    right: 930px;
+  }
+
+  .lg\:left-\[-20px\] {
+    left: -20px;
+  }
+
+  .lg\:left-\[-0px\] {
+    left: -0px;
+  }
+
+  .lg\:left-\[-30px\] {
+    left: -30px;
+  }
+
+  .lg\:left-\[-50px\] {
+    left: -50px;
+  }
+
+  .lg\:left-\[-70px\] {
+    left: -70px;
+  }
+
+  .lg\:left-\[-60px\] {
+    left: -60px;
+  }
+
+  .lg\:bottom-2 {
+    bottom: 0.5rem;
+  }
+
+  .lg\:bottom-12 {
+    bottom: 3rem;
+  }
+
+  .lg\:bottom-\[20\%\] {
+    bottom: 20%;
+  }
+
+  .lg\:bottom-\[10\%\] {
+    bottom: 10%;
   }
 
   .lg\:mx-0 {
