--- a/src/output.css
+++ b/src/output.css
@@ -610,72 +610,12 @@ video {
   top: -50px;
 }
 
-.bottom-0 {
-  bottom: 0px;
-}
-
-.left-0 {
-  left: 0px;
-}
-
-.right-5 {
-  right: 1.25rem;
-}
-
-.right-12 {
-  right: 3rem;
-}
-
-.right-\[\] {
-  right: ;
-}
-
-.right-\[200\] {
-  right: 200;
-}
-
-.right-\[200px\] {
-  right: 200px;
-}
-
-.right-\[150px\] {
-  right: 150px;
-}
-
-.right-\[140px\] {
-  right: 140px;
-}
-
-.right-\[120px\] {
-  right: 120px;
-}
-
-.right-\[0px\] {
-  right: 0px;
-}
-
-.right-\[10px\] {
-  right: 10px;
-}
-
-.right-\[1450px\] {
-  right: 1450px;
-}
-
-.right-\[145px\] {
-  right: 145px;
-}
-
 .z-10 {
   z-index: 10;
 }
 
 .z-20 {
   z-index: 20;
-}
-
-.z-50 {
-  z-index: 50;
 }
 
 .m-auto {
@@ -685,6 +625,10 @@ video {
 .mx-4 {
   margin-left: 1rem;
   margin-right: 1rem;
+}
+
+.mb-12 {
+  margin-bottom: 3rem;
 }
 
 .mb-\[60px\] {
@@ -717,10 +661,6 @@ video {
 
 .mt-\[90px\] {
   margin-top: 90px;
-}
-
-.mb-12 {
-  margin-bottom: 3rem;
 }
 
 .block {
@@ -931,10 +871,6 @@ video {
   padding-top: 60px;
 }
 
-.pb-12 {
-  padding-bottom: 3rem;
-}
-
 .text-center {
   text-align: center;
 }
@@ -1042,8 +978,16 @@ video {
     bottom: 0px;
   }
 
-  .md\:right-0 {
-    right: 0px;
+  .md\:left-\[-30\%\] {
+    left: -30%;
+  }
+
+  .md\:left-\[50\%\] {
+    left: 50%;
+  }
+
+  .md\:top-20 {
+    top: 5rem;
   }
 
   .md\:top-\[-150px\] {
@@ -1052,42 +996,6 @@ video {
 
   .md\:top-\[-80px\] {
     top: -80px;
-  }
-
-  .md\:left-\[-30\%\] {
-    left: -30%;
-  }
-
-  .md\:top-20 {
-    top: 5rem;
-  }
-
-  .md\:right-\[145px\] {
-    right: 145px;
-  }
-
-  .md\:right-\[148px\] {
-    right: 148px;
-  }
-
-  .md\:right-\[146px\] {
-    right: 146px;
-  }
-
-  .md\:left-\[\] {
-    left: ;
-  }
-
-  .md\:left-\[90\%\] {
-    left: 90%;
-  }
-
-  .md\:left-\[30\%\] {
-    left: 30%;
-  }
-
-  .md\:left-\[50\%\] {
-    left: 50%;
   }
 
   .md\:z-40 {
@@ -1195,6 +1103,18 @@ video {
     gap: 22px;
   }
 
+  .md\:gap-y-\[\] {
+    row-gap: ;
+  }
+
+  .md\:gap-y-\[52\] {
+    row-gap: 52;
+  }
+
+  .md\:gap-y-\[52px\] {
+    row-gap: 52px;
+  }
+
   .md\:border-b-transparent {
     border-bottom-color: transparent;
   }
@@ -1204,28 +1124,16 @@ video {
     padding-right: 30px;
   }
 
-  .md\:pt-\[\] {
-    padding-top: ;
-  }
-
-  .md\:pt-\[65px\] {
-    padding-top: 65px;
-  }
-
-  .md\:pt-\[90px\] {
-    padding-top: 90px;
-  }
-
-  .md\:pt-0 {
-    padding-top: 0px;
+  .md\:pb-\[100px\] {
+    padding-bottom: 100px;
   }
 
   .md\:pt-\[52px\] {
     padding-top: 52px;
   }
 
-  .md\:pb-\[100px\] {
-    padding-bottom: 100px;
+  .md\:pt-\[90px\] {
+    padding-top: 90px;
   }
 
   .md\:text-left {
@@ -1245,283 +1153,45 @@ video {
     font-size: 1.125rem;
     line-height: 1.75rem;
   }
+
+  .md\:text-5xl {
+    font-size: 3rem;
+    line-height: 1;
+  }
+
+  .md\:text-xl {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
 }
 
 @media (min-width: 1024px) {
-  .lg\:bottom-28 {
-    bottom: 7rem;
-  }
-
-  .lg\:left-0 {
-    left: 0px;
-  }
-
-  .lg\:right-\[50\%\] {
-    right: 50%;
-  }
-
-  .lg\:left-\[\] {
-    left: ;
-  }
-
-  .lg\:left-\[-20\%\] {
-    left: -20%;
-  }
-
-  .lg\:left-\[-30\%\] {
-    left: -30%;
-  }
-
-  .lg\:left-\[-\] {
-    left: -;
+  .lg\:bottom-\[10\%\] {
+    bottom: 10%;
   }
 
   .lg\:left-\[-10\%\] {
     left: -10%;
   }
 
-  .lg\:left-10 {
-    left: 2.5rem;
-  }
-
-  .lg\:left-\[10\%\] {
-    left: 10%;
-  }
-
-  .lg\:left-\[-\%\] {
-    left: -%;
-  }
-
-  .lg\:left-\[-5\%\] {
-    left: -5%;
-  }
-
-  .lg\:left-\[25\%\] {
-    left: 25%;
-  }
-
-  .lg\:left-\[225\%\] {
-    left: 225%;
-  }
-
-  .lg\:right-\[70\%\] {
-    right: 70%;
-  }
-
-  .lg\:right-\[40\%\] {
-    right: 40%;
-  }
-
-  .lg\:right-\[48\%\] {
-    right: 48%;
-  }
-
-  .lg\:right-\[45\%\] {
-    right: 45%;
-  }
-
-  .lg\:right-\[46\%\] {
-    right: 46%;
-  }
-
-  .lg\:left-\[200px\] {
-    left: 200px;
-  }
-
-  .lg\:left-\[-200px\] {
-    left: -200px;
-  }
-
-  .lg\:right-0 {
-    right: 0px;
-  }
-
-  .lg\:right-\[\] {
-    right: ;
-  }
-
-  .lg\:right-\[-30\%\] {
-    right: -30%;
-  }
-
-  .lg\:top-\[\] {
-    top: ;
-  }
-
-  .lg\:top-\[-\] {
-    top: -;
-  }
-
-  .lg\:top-\[-45\%\] {
-    top: -45%;
-  }
-
-  .lg\:top-\[-4\%\] {
-    top: -4%;
-  }
-
-  .lg\:top-\[-\%\] {
-    top: -%;
-  }
-
-  .lg\:top-\[-55\%\] {
-    top: -55%;
-  }
-
-  .lg\:top-\[-40\%\] {
-    top: -40%;
-  }
-
-  .lg\:top-\[-70\%\] {
-    top: -70%;
-  }
-
-  .lg\:top-\[-70px\] {
-    top: -70px;
-  }
-
-  .lg\:top-\[-60px\] {
-    top: -60px;
-  }
-
-  .lg\:top-\[560px\] {
-    top: 560px;
-  }
-
-  .lg\:top-\[50px\] {
-    top: 50px;
-  }
-
-  .lg\:top-\[0px\] {
-    top: 0px;
-  }
-
-  .lg\:top-\[100px\] {
-    top: 100px;
-  }
-
-  .lg\:top-\[30px\] {
-    top: 30px;
-  }
-
-  .lg\:top-\[-30px\] {
-    top: -30px;
-  }
-
-  .lg\:top-\[-10px\] {
-    top: -10px;
-  }
-
-  .lg\:top-\[-0px\] {
-    top: -0px;
-  }
-
-  .lg\:top-\[-40px\] {
-    top: -40px;
-  }
-
-  .lg\:top-\[-100px\] {
-    top: -100px;
-  }
-
-  .lg\:top-\[-120px\] {
-    top: -120px;
-  }
-
-  .lg\:top-0 {
-    top: 0px;
-  }
-
-  .lg\:top-20 {
-    top: 5rem;
-  }
-
-  .lg\:top-36 {
-    top: 9rem;
-  }
-
-  .lg\:left-\[-30\] {
-    left: -30;
-  }
-
-  .lg\:left-\[-50\%\] {
-    left: -50%;
-  }
-
-  .lg\:right-\[200px\] {
-    right: 200px;
-  }
-
-  .lg\:right-\[20px\] {
-    right: 20px;
-  }
-
-  .lg\:right-\[-20px\] {
-    right: -20px;
-  }
-
-  .lg\:right-\[-220px\] {
-    right: -220px;
-  }
-
-  .lg\:right-\[300px\] {
-    right: 300px;
-  }
-
-  .lg\:right-\[1000px\] {
-    right: 1000px;
-  }
-
-  .lg\:right-\[900px\] {
-    right: 900px;
-  }
-
-  .lg\:right-\[90px\] {
-    right: 90px;
-  }
-
-  .lg\:right-\[930px\] {
-    right: 930px;
-  }
-
-  .lg\:left-\[-20px\] {
-    left: -20px;
-  }
-
-  .lg\:left-\[-0px\] {
-    left: -0px;
-  }
-
-  .lg\:left-\[-30px\] {
-    left: -30px;
-  }
-
-  .lg\:left-\[-50px\] {
-    left: -50px;
-  }
-
-  .lg\:left-\[-70px\] {
-    left: -70px;
+  .lg\:left-\[-30\%\] {
+    left: -30%;
   }
 
   .lg\:left-\[-60px\] {
     left: -60px;
   }
 
-  .lg\:bottom-2 {
-    bottom: 0.5rem;
+  .lg\:right-\[-30\%\] {
+    right: -30%;
   }
 
-  .lg\:bottom-12 {
-    bottom: 3rem;
+  .lg\:top-36 {
+    top: 9rem;
   }
 
-  .lg\:bottom-\[20\%\] {
-    bottom: 20%;
-  }
-
-  .lg\:bottom-\[10\%\] {
-    bottom: 10%;
+  .lg\:top-\[-120px\] {
+    top: -120px;
   }
 
   .lg\:mx-0 {
@@ -1543,6 +1213,10 @@ video {
 
   .lg\:mr-\[399px\] {
     margin-right: 399px;
+  }
+
+  .lg\:mt-\[105px\] {
+    margin-top: 105px;
   }
 
   .lg\:block {
@@ -1581,6 +1255,14 @@ video {
     gap: 180px;
   }
 
+  .lg\:gap-y-\[\] {
+    row-gap: ;
+  }
+
+  .lg\:gap-y-\[58px\] {
+    row-gap: 58px;
+  }
+
   .lg\:px-0 {
     padding-left: 0px;
     padding-right: 0px;
@@ -1589,6 +1271,10 @@ video {
   .lg\:px-\[165px\] {
     padding-left: 165px;
     padding-right: 165px;
+  }
+
+  .lg\:pb-\[139px\] {
+    padding-bottom: 139px;
   }
 
   .lg\:pt-0 {
@@ -1603,24 +1289,16 @@ video {
     padding-top: 2.25rem;
   }
 
-  .lg\:pt-\[84px\] {
-    padding-top: 84px;
-  }
-
   .lg\:pt-\[127px\] {
     padding-top: 127px;
-  }
-
-  .lg\:pt-\[\] {
-    padding-top: ;
   }
 
   .lg\:pt-\[72px\] {
     padding-top: 72px;
   }
 
-  .lg\:pb-\[139px\] {
-    padding-bottom: 139px;
+  .lg\:pt-\[84px\] {
+    padding-top: 84px;
   }
 
   .lg\:text-left {
@@ -1634,6 +1312,10 @@ video {
 
   .lg\:text-\[88px\] {
     font-size: 88px;
+  }
+
+  .lg\:text-\[\] {
+    color: ;
   }
 }
 
