--- a/src/output.css
+++ b/src/output.css
@@ -778,6 +778,11 @@ video {
   border-color: rgb(255 111 91 / var(--tw-border-opacity));
 }
 
+.border-white {
+  --tw-border-opacity: 1;
+  border-color: rgb(255 255 255 / var(--tw-border-opacity));
+}
+
 .bg-dark_black {
   --tw-bg-opacity: 1;
   background-color: rgb(21 21 21 / var(--tw-bg-opacity));
@@ -1351,6 +1356,10 @@ video {
 
   .lg\:pt-\[200px\] {
     padding-top: 200px;
+  }
+
+  .lg\:pt-1 {
+    padding-top: 0.25rem;
   }
 
   .lg\:text-left {
